[gd_scene load_steps=5 format=3 uid="uid://cfqudxusskr45"]

[ext_resource type="Script" path="res://addons/github-integration/scripts/loading.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cfd77y4kojg0x" path="res://addons/github-integration/resources/loading/throbber.png" id="2"]

[sub_resource type="Shader" id="1"]
code = "shader_type canvas_item;
render_mode unshaded, blend_disabled;

uniform float speed = 5.0;

vec2 rotateUV(vec2 uv, vec2 pivot, float rotation) {
    float cosa = cos(rotation);
    float sina = sin(rotation);
    uv -= pivot;
    return vec2(
        cosa * uv.x - sina * uv.y,
        cosa * uv.y + sina * uv.x 
    ) + pivot;
}

void vertex() {
   VERTEX = rotateUV(VERTEX, TEXTURE_PIXEL_SIZE+vec2(45,45), TIME * speed);
}

"

[sub_resource type="ShaderMaterial" id="2"]
shader = SubResource("1")
shader_parameter/speed = 5.0

[node name="loading" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="loading2" type="TextureRect" parent="VBoxContainer"]
material = SubResource("2")
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Number" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "..."

[node name="Message" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "message"

[connection signal="visibility_changed" from="." to="." method="_on_loading_visibility_changed"]
